Bug 104861 - When navigating the Extension manager with the keyboard, it is not possible to focus the list of extensions
Summary: When navigating the Extension manager with the keyboard, it is not possible t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.1.0
Keywords: accessibility
Depends on:
Blocks: a11y, Accessibility Extension-Manager
  Show dependency treegraph
 
Reported: 2016-12-22 14:21 UTC by am_dxer
Modified: 2018-02-09 20:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description am_dxer 2016-12-22 14:21:28 UTC
Description:
When using the Tab key to navigate the Extension Manager, I was not able to focus the list of extensions with the keyboard

Steps to Reproduce:
1. Navigate to Options>Extension Manager
2. Install ,multiple extensions
3. Use the Tab key to navigate through all of the controls in the dialog.

Actual Results:  
Focus skips the list of extensions.

Expected Results:
It should be possible to focus the list of extensions and navigate between them.


Reproducible: Always

User Profile Reset: yes

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:53.0) Gecko/20100101 Firefox/53.0
Comment 1 Alex ARNAUD 2016-12-29 16:26:31 UTC
Version: 5.2.3.3
Build ID: 1:5.2.3-2~bpo8+1
Threads CPU : 4; Version de l'OS :Linux 3.16; UI Render : par défaut; VCL: gtk2; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group

Dear am_dxer and all,

Thanks for the report, I can confirm the issue on Debian 8 with Orca 3.22.

Best regards.
Comment 2 Yousuf Philips (jay) (retired) 2017-05-02 16:40:25 UTC
The dialog was revamped in bug 103146, please confirm if this issue is still present in 5.3 or above.
Comment 3 Alex ARNAUD 2017-05-03 12:42:17 UTC
(In reply to Yousuf Philips (jay) from comment #2)
> The dialog was revamped in bug 103146, please confirm if this issue is still
> present in 5.3 or above.

Version: 5.4.0.0.alpha0+
Build ID: 74ccd02eda2d6325a27266fd935aba29b3d75020
CPU threads: 4; OS: Linux 3.16; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-04-27_23:51:14
Locale: fr-FR (fr_FR.UTF-8); Calc: group

I see no improvement related to this bug on the new daily build. The extension list is not reachable with the keyboard.

Best regards.
Comment 4 Commit Notification 2018-02-06 09:38:27 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7214a912f7ce1a1c1183f9eae6181656cfadea30

tdf#104861: extension list is not a child dlg control anymore

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Katarina Behrens (Inactive) 2018-02-07 21:00:26 UTC
¯\_(ツ)_/¯
Comment 6 Alex ARNAUD 2018-02-08 11:34:23 UTC
Hello Katarina,

Thank you very much to work on accessibility improvements.

Do you think the first item could be selected when the focus enter inside the extensions list? Should I open another bug for that?

Best regards.
Comment 7 Katarina Behrens (Inactive) 2018-02-09 00:26:43 UTC
(In reply to Alex ARNAUD from comment #6)
> Hello Katarina,

I prefer to be referred to as 'Bubli', thank you
 
> Do you think the first item could be selected when the focus enter inside
> the extensions list? 

It is certainly technically possible

The issue I have with it is that some extensions (ImpressRunner being an example offender) spew out boadloads of (license) text when selected/expanded, making other extensions/items scroll out of viewport so it's difficult to figure out there's more items to see.

I'm just a random able-bodied hacker though. If you say this makes the life easier for users depending on assistive technologies, I'm fine w/ doing that

> Should I open another bug for that?
 
Nay, fine to continue here
Comment 8 Alex ARNAUD 2018-02-09 20:43:48 UTC
(In reply to Katarina Behrens (CIB) from comment #7)
> (In reply to Alex ARNAUD from comment #6)
> > Hello Katarina,
> 
> I prefer to be referred to as 'Bubli', thank you

My apologize Bubli.

> > Do you think the first item could be selected when the focus enter inside
> > the extensions list? 
> 
> It is certainly technically possible
> 
> The issue I have with it is that some extensions (ImpressRunner being an
> example offender) spew out boadloads of (license) text when
> selected/expanded, making other extensions/items scroll out of viewport so
> it's difficult to figure out there's more items to see.
> 
> I'm just a random able-bodied hacker though. If you say this makes the life
> easier for users depending on assistive technologies, I'm fine w/ doing that

Yes, it is better for the user experience of assistive technology users because I'm not aware of others UI where the focus isn't positioned on the first item.

Best regards and thanks you.