tdf#104861: extension list is not a child dlg control anymore

After 989cf68b68ed, 88f31af74816 and 3aec456ba8a0 buttons aren't
embedded in the extension list anymore, so treating it like a
child dlg control just causes Tab key to skip the widget

Change-Id: I4372062c135804d8b51a8640c1e9959f03a617fe